--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "author": "Yichang <yichang.li@zalora.com>",
   "license": "",
   "scripts": {
-    "build": "./node_modules/webpack/bin/webpack.js",
-    "start": "./node_modules/webpack-dev-server/bin/webpack-dev-server.js"
+    "build": "webpack",
+    "start": "webpack-dev-server"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -15,12 +15,11 @@
     "babel-loader": "^8.0.2",
     "css-loader": "^1.0.0",
     "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.3",
     "node-sass": "^4.9.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.0",
-    "webpack": "^4.19.1",
+    "webpack": "4.19.0",
     "webpack-cli": "^3.1.1",
     "webpack-dev-server": "^3.1.9"
   }
